Production-Org-Metadata/force-app/main/default/objects/Document__c/fields/File_Reference__c.field-meta.xml
<CustomField>
    <fullName>File_Reference__c</fullName>
    <label>File Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>